Fix tâches sudo

--- a/roles/sudo-user/tasks/sudo/files/base.j2
+++ b/roles/sudo-user/tasks/sudo/files/base.j2
@@ -2,5 +2,5 @@
 # Permet à l'utilisateur {{ sudo_user }} et aux groupes admin et sudo d'utiliser sudo sans mot de passe
 
 {{ sudo_user }} ALL=(ALL) NOPASSWD: ALL
-%admin ALL=(ALL) NOPASSWD: ALL
-%sudo ALL=(ALL) NOPASSWD: ALL
+#%admin ALL=(ALL) NOPASSWD: ALL
+#%sudo ALL=(ALL) NOPASSWD: ALL
